--- a/NumberOperationsNUnitTests/NumberOperationsNUnit.Tests.csproj
+++ b/NumberOperationsNUnitTests/NumberOperationsNUnit.Tests.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArrayFilterNUnitTest.cs" />
+    <Compile Include="ArrayFilterNUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
